# LoKI-MC

./: .gitignore  README.md
Code/: CMakeLists.txt
Code/Input/: default_setup.in
Code/Input/Argon/: Ar_LXCat.txt  Ar_swarm_setup.in
Code/Input/CO/: CO_swarm_setup.in
Code/Input/CO2/: CO2_LXCat.txt  CO2_swarm_setup.in
Code/Input/Databases/: OPBParameter.txt  anharmonicFrequencies.txt  energyVibLevO2X.txt  harmonicFrequencies.txt  lennardJonesDepth.txt  lennardJonesDistance.txt  masses.txt  quadrupoleMoment.txt  rotationalConstants.txt
Code/Input/H2O/: H2O_rotEnergy_Tennyson.txt  H2O_vibEnergy_Itikawa.txt
Code/Input/Helium/: He_swarm_setup.in  databaseStateEnergyHe.txt  databaseStatisticalWeightsHe.txt
Code/Input/Nitrogen/: N2_LXCat.txt  N2_rot_LXCat.txt  N2_swarm_setup.in  N2_vib_LXCat.txt  N2_vibpop.txt  N2energyVibLevels.txt
Code/Input/Oxygen/: O2_LXCat.txt  O2_LXCat_extra.txt  O2_rot_LXCat.txt  O2_swarm_setup.in  O2_vib_energy_levels.txt  O3_LXCat_extra.txt  O_LXCat.txt  O_LXCat_extra.txt
Code/Input/ReidRampGas/: ReidRampGas_LXCat.txt  ReidRamp_setup_AC.in  ReidRamp_setup_AC_B.in  ReidRamp_setup_B.in  ReidRamp_setup_DC.in
Code/LoKI-MC/GnuplotFunctions/: MCTemporalInfo.p  MCTemporalInfo_periodic.p  eedf.p  eedfEvdf.p  power_BoltzmannMC.p  power_PrescribedEedf.p  swarmParams_BoltzmannMC.p  swarmParams_BoltzmannMC_nonSymmetric.p  swarmParams_PrescribedEedf.p
Code/LoKI-MC/Headers/: AngularDistributionFunctions.h  AngularScatteringFunctions.h  BoltzmannMC.h  Collision.h  Constant.h  EedfGas.h  EedfState.h  FieldInfo.h  GUI.h  Gas.h  GasPropertyFunctions.h  GeneralDefinitions.h  Grid.h  MathFunctions.h  Message.h  Output.h  Parse.h  PrescribedEedf.h  Setup.h  State.h  StatePropertyFunctions.h  WorkingConditions.h
Code/LoKI-MC/Sources/: BoltzmannMC.C  Collision.C  EedfGas.C  EedfState.C  FieldInfo.C  Grid.C  MathFunctions.C  Message.C  Parse.C  PrescribedEedf.C  lokimc.C
Code/Output/swarm_O2/: lookUpTableEGrid.txt  lookUpTableEedf.txt  lookUpTablePower.txt  lookUpTableRateCoeff.txt  setup.txt  (+1 more)
(+56 files in other folders)
